# Paper-Search

./: .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  docker-compose.yml  pyproject.toml  scrape.py  search.py
.github/workflows/: linter.yml
flaskr/: __init__.py
flaskr/templates/: result.html
