[tool.poetry]
name = "paper-search"
version = "0.1.0"
description = ""
authors = ["nomnomnonono <nozomu.koujiguchi1204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.5.3"
pysqlite3 = "^0.5.0"
numpy = "^1.24.2"
arxiv = "^1.4.3"
polars = "^0.16.16"
sentence-transformers = "^2.2.2"
omegaconf = "^2.3.0"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
