[tool.poetry]
name = "paper-search"
version = "0.1.0"
description = ""
authors = ["nomnomnonono <nozomu.koujiguchi1204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.5.3"
pysqlite3 = "^0.5.0"
numpy = "^1.24.2"
arxiv = "^1.4.3"
polars = "^0.16.16"
sentence-transformers = "^2.2.2"
omegaconf = "^2.3.0"
gradio = "^3.23.0"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.10.3", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.3"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]